update: update patch method, docs
